--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,12 +5,24 @@
   </welcome-file-list>
   <servlet>
     <servlet-name>VolumeCalculator</servlet-name>
-    <servlet-class>com.example.VolumeCalculator</servlet-class>
+    <servlet-class>com.example.VolumeCalculatorServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>VolumeCalculator</servlet-name>
     <url-pattern>/VolumeCalculator</url-pattern>
   </servlet-mapping>
   
+  <context-param>
+  	<param-name>width</param-name>
+  	<param-value>10</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>height</param-name>
+  	<param-value>10</param-value>
+   </context-param>
+  <context-param>
+  	<param-name>depth</param-name>
+  	<param-value>18</param-value>
+   </context-param>
   
 </web-app>
